ToDo List
    * Create the option to force tweets
    * Support more itwp templates
        * Porto
        * Linea traghetto
        * Imbarcazione veneziana
        * Barca a vela
        * Museo
        * Manoscritto
        * Edificio religioso
        * Composizione
    * Support enwiki templates
        * Infobox film
        * Infobox television film

Version dev-4.2 (expected 15/03/2012)

Version 4.1.1 (08/03/2012)
    * Make c and p available for all classes
    * itwp.operaarte add initial support
    * itwp.film fix for CaSeS
    * status add file status.html

Version 4.1 (07/03/2012)
    * Change twitter library
    * Create dbcreate.php account functions to enable new accounts
    * Create dyrki/tools.php class with dbcreate.php code
    * tools rename dbcreate.php
    * tools add follow function
    * tools add add source function
    * tools add add template function
    * itwp.nave add initial support
    * itwp.album add initial support
    * Fix a bug that was reducing the possible tweet considerably due to some inconsistences between CaSeS
    * itwp.libro add support

Version 4.0 (25/02/2012)
    * Removed all unused files
    * Create a folder in 'class' for each wiki
    * Create a folder system in 'class' that will allow a shared library
    * Remove test_tweet.php since it will no be used any longer
    * Rename build_tweet.php in tweet.php
    * Create a source class to be able to abstract from the actual source
    * Modify the database to allow multiple sources
    * Modify the database to allow multiple accounts
    * Reduce the db footprint removing redundant data from itwp_pages
    * Substitute itwp_templates with templates
    * Remove unused tables from db
    * Cleaned changelog

Version 3.1 (19/02/2012)
    * Improve bitly script output
    * Remove sub modules
    * Dbcreate now is able to work on a single template
    * Create the class for the Film template
    * Fix the #? bug on DieYear