@@ -120,6 +120,7 @@
                 <td>
                     <ul>
                         <li>tAutore</li>
+                        <li>tAltezza</li>
                         <li>tMateriale</li>
                     </ul>
                 </td>
