@@ -14,6 +14,9 @@ ToDo List
         * Infobox television film
 
 Version dev-4.2 (expected 15/03/2012)
+    * itwp.operaarte add tMateriale
+    * itwp.operaarte add tTecnica
+    * itwp.operaarte add tAltezza
 
 Version 4.1.1 (08/03/2012)
     * Make c and p available for all classes
